tests/res/visibility/private_field_read.say
type Box {
    secret; // private by default
    init(s) { this.secret = s; }
}
say b = Box(42);
// A private member is invisible to external code: it is not in the runtime name map, so the access
// is reported as "no such member" rather than a dedicated visibility error.
print(b.secret); // error: Invalid index: Box doesn't have member "secret"
